Bug 95913 - Slider does not move if OpenGL enabled
Summary: Slider does not move if OpenGL enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha1
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.0
Keywords:
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2015-11-18 18:35 UTC by Roman Kuznetsov
Modified: 2016-10-25 19:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2015-11-18 18:35:11 UTC
Version: 5.1.0.0.alpha1+ (x64)
Build ID: 32d4c03cba399ada807b8ec113a3928aa9e3ff7b-GL
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-11-16_23:41:46
Locale: ru-RU (ru_RU)
OS: Windows 7 HB x86-64

Slider Transparency in Area (and Shadow) section of Sidebar does not move if option "Use OpenGL for all rendering" enabled. If you move the slider, the values are changed, and the slider does not move. If this option is disabled, then slider moves.
Comment 1 raal 2015-11-19 07:45:49 UTC
I can confirm with Version: 5.1.0.0.alpha1+
Build ID: 8bde421ccec9c10fe1382ad68485852889dd4c74-GL
Comment 2 Buovjaga 2015-12-16 16:49:33 UTC
Could you add a comment with your OGL info: https://wiki.documentfoundation.org/OpenGL#Windows
Comment 3 Roman Kuznetsov 2015-12-16 17:43:20 UTC
(In reply to Beluga from comment #2)
> Could you add a comment with your OGL info:
> https://wiki.documentfoundation.org/OpenGL#Windows

Renderer: AMD Radeon HD 7700 Series
Vendor: ATI Technologies Inc.
Memory: 1024 MB
Version: 4.4.13416 Core Profile Forward-Compatible Context 15.300.1025.0
Shading language version: 4.40
Comment 4 Michael Meeks 2016-01-13 10:46:05 UTC
Reproduced in something close to 5.1.0 RC2 -> Tor - hopefully this is some simple double-buffered rendering problem somewhere in the slider impl. not re-rendering for some reason ? =)
Comment 5 Tor Lillqvist 2016-01-18 12:32:29 UTC
The problem is caused by the caching of native control textures. That should not be done for CTRL_SLIDER. Patch incoming.
Comment 6 Commit Notification 2016-01-18 12:37:44 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=56a35d67138beada946697a81daa9f0b08e77cfc

tdf#95913: Don't cache CTRL_SLIDER

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Tor Lillqvist 2016-01-18 12:47:05 UTC
Patches for 5.1 and 5.1.0 are awaiting review in gerrit.
Comment 8 Commit Notification 2016-01-18 17:09:06 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=863811c2d3acfc4c1746f86ab6055ddde83e937a&h=libreoffice-5-1

tdf#95913: Don't cache CTRL_SLIDER

It will be available in 5.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2016-01-19 12:08:42 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-5-1-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bbe4b3a7cc2f5410e65b220e24f23f55f7eaaa1d&h=libreoffice-5-1-0

tdf#95913: Don't cache CTRL_SLIDER

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.