tdf#95913: Don't cache CTRL_SLIDER

Change-Id: I6af4b27f5bc2f24918d92fe8c5e430cfdfad6439
(cherry picked from commit 56a35d67138beada946697a81daa9f0b08e77cfc)